# cdrle

./: Cargo.toml  README.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_no_panic.rs  roundtrip.rs
src/: lib.rs
